--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,7 @@ jobs:
     - name: setup-chromedriver
       uses: nanasess/setup-chromedriver@v1.0.1
     - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@master
       with:
         python-version: 3.9
     - name: Install dependencies
