--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,14 +30,14 @@ jobs:
         pip install -r requirements-dev.txt
         pip install wheel
         pip install pipwin
-        pipwin install numpy
-        pipwin install pandas
-        pipwin install shapely
-        pipwin install gdal
-        pipwin install fiona
-        pipwin install pyproj
-        pipwin install six
-        pipwin install rtree
+        pip install numpy
+        pip install pandas
+        pip install shapely
+        pip install gdal
+        pip install fiona
+        pip install pyproj
+        pip install six
+        pip install rtree
         pip install geopandas
     - name: Lint with flake8
       run: |
