--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,8 +26,14 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update && sudo apt install tesseract-ocr libtesseract-dev
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip        
         pip install -r requirements-dev.txt
+        
+        sudo apt-get install libgdal-dev
+        export CPLUS_INCLUDE_PATH=/usr/include/gdal
+        export C_INCLUDE_PATH=/usr/include/gdal
+        pip install GDAL
+        
         pip install wheel
         pip install pipwin
         pip install numpy
