--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,13 +17,15 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
+    steps:    
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@master
       with:
         python-version: 3.8
     - name: Install dependencies
+    with:
+      arch: aarch64
       run: |
         sudo apt update && sudo apt install tesseract-ocr libtesseract-dev
         python -m pip install --upgrade pip        
