--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,43 +20,28 @@ jobs:
 
     runs-on: ubuntu-latest
 
+   name: Build and publish Python 🐍 distributions 📦 to PyPI
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
+    - uses: actions/checkout@master
+    - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: '3.7'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build
-    
-    - name: Build package
+        python-version: '3.10'
+    - name: Install pypa/setuptools
       run: >-
-        python -m build
-        --sdist
-        --wheel
-        --outdir dist/
-        .
+        python -m
+        pip install wheel
     - name: Extract tag name
       id: tag
       run: echo ::set-output name=TAG_NAME::$(echo $GITHUB_REF | cut -d / -f 3)
-    
     - name: Update version in setup.py
       run: >-
         sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.TAG_NAME }}/g" setup.py
-    
     - name: Build a binary wheel
       run: >-
         python setup.py sdist bdist_wheel
-    
-    - name: Publish distribution 📦 to Test PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        password: ${{ secrets.TEST_PYPI_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
-    
-    - name: Publish distribution 📦 to PyPI      
-      uses: pypa/gh-action-pypi-publish@release/v1
+    - name: Publish distribution 📦 to PyPI
+      uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.PYPI_TOKEN }}
