--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,37 @@
-pytest==7.2.2
-setuptools==67.2.0
-
+attrs==22.2.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+customtkinter==5.1.2
+darkdetect==0.8.0
+docopt==0.6.2
+exceptiongroup==1.1.1
 Fiona==1.9.2
 geopandas==0.12.2
+idna==3.4
+importlib-metadata==6.1.0
+iniconfig==2.0.0
+munch==2.5.0
+numpy==1.24.2
+packaging==23.0
+pandas==1.5.3
+pipreqs==0.4.11
+pluggy==1.0.0
+pyproj==3.4.1
+pytest==7.2.2
+python-dateutil==2.8.2
+pytz==2023.2
+requests==2.28.2
+shapely==2.0.1
+six==1.16.0
+tomli==2.0.1
+tqdm==4.65.0
+urllib3==1.26.15
+yarg==0.1.9
+zipp==3.15.0
+
+setuptools==67.2.0
+matplotlib==3.7.1
