--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ tqdm==4.65.0
 urllib3==1.26.15
 yarg==0.1.9
 zipp==3.15.0
+pyogrio==0.9.0
+pyarrow==17.0.0
 
 setuptools==67.2.0
 matplotlib==3.7.1
